crates/solidity/testing/snapshots/bindings_output/constants/bind_to_type/generated/v2/0.8.8-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or BytesKeyword or ContractKeyword or EnumKeyword or ErrorKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or TypeKeyword or UfixedKeyword or UintKeyword.
    ╭─[input.sol:6:1]
    │
  6 │ ╭─▶ using MemoryReaders for MemoryPointer;
    ┆ ┆   
 18 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (1):
- Def: #1 ["MemoryPointer" @ input.sol:4:6] (udvt, type: meta-type)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 4 │ type MemoryPointer is uint256;
   │      ──────┬──────  
   │            ╰──────── name: 1
───╯
